# tihc

./: .gitignore  Cargo.toml  DDL_LIBRARY_VISIBILITY_SUMMARY.md  License  Makefile  PRIVACY_POLICY.md  README.md  _config.toml  config_template.toml  debug  demo_ddl_backend.sh  deploy_grafana_image_render.sh  meta.yaml  other.md  test-workflow.sh  test_ddl_plugin_integration.sh  tidb_check.docx  topsql_data.json  topsql_data_result.html  vercel.json  ~$db_check.docx
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/api/: database.rs  ddl_precheck.rs  ddl_precheck_test.rs  editor_database.rs  editor_notifications.rs  editor_sql.rs  editor_table.rs  healthz.rs  lang.rs  mod.rs  notifications.rs  slowlog.rs  sql.rs  table.rs
backend/src/application/: database.rs  ddl_precheck.rs  editor.rs  extension.rs  inspection.rs  mcp.rs  mod.rs  notifications.rs  service_discovery.rs  services.rs  settings.rs  slowlog.rs  sql_editor.rs  table.rs
backend/src/application/mcp/: counter_service.rs  lossy_ddl_service.rs  mod.rs
backend/src/domain/: database_connection.rs  ddl_precheck.rs  extension.rs  inspection.rs  mcp.rs  mod.rs  notifications.rs  settings.rs  slowlog.rs  table.rs
backend/src/domain/database/: mod.rs
backend/src/domain/editor/: mod.rs
backend/src/domain/mcp/: lossy_ddl.rs
backend/src/domain/shared/: mod.rs
backend/src/handlers/: ddl_precheck.rs  editor_sql.rs  mod.rs  slowlog.rs  static_files.rs
backend/src/infrastructure/: bus_client.rs  config.rs  database.rs  extension.rs  logging.rs  mod.rs
backend/src/infrastructure/web/: mod.rs  server.rs
backend/src/interface/: mod.rs
backend/src/interface/http/: controllers.rs  database_controllers.rs  ddl_controllers.rs  extension_controllers.rs  extractors.rs  health_controllers.rs  inspection_controllers.rs  middleware.rs  mod.rs  notifications_controllers.rs  rca_controllers.rs  responses.rs  routes.rs  settings_controllers.rs  slowlog_controllers.rs  sql_editor_controllers.rs  static_files.rs  table_controllers.rs
backend/src/interface/mcp/: adapter.rs  aggregator.rs  dispatcher.rs  handlers.rs  mcp.rs  mod.rs  prompt_handlers.rs  registry.rs  service.rs  tool_router.rs
backend/src/middleware/: mod.rs
backend/src/server/: mod.rs
cli/: Cargo.toml
cli/src/: check_gcc.rs  main.rs  plugin.rs  static_assets.rs  static_files.rs
cli/src/commands/: mcp_client.rs  mod.rs  precheck.rs  slowlog.rs  web.rs
components/cli/: Cargo.toml
components/cli/src/: collect_docdb.rs  collect_pprof.rs  commands.rs  lib.rs  tools_docdb.rs  tools_slowlog.rs
components/collect/: Cargo.toml
components/collect/src/: lib.rs  pprof.rs
components/tools/: Cargo.toml
components/tools/src/: column_replacer.rs  lib.rs  slow_log_retriever.rs  slow_query.rs  slowlog_fields.rs
components/tools/tests/: mysql_connection_test.rs  parser_delete_test.rs  parser_insert_test.rs  parser_select_test.rs  parser_update_test.rs  slowlog_test.rs  test.txt
components/utils/: Cargo.toml
components/utils/src/: cli_output.rs  common.rs  error.rs  io_utils.rs  lib.rs  log.rs  process.rs  profile.rs  read_write.rs  sql_info.rs  time.rs
components/utils/tests/: br_test.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/application/: entity.rs  mod.rs
core/src/domain/: mod.rs
core/src/infrastructure/: config.rs  logging.rs  mod.rs
core/src/interface/: mod.rs
core/src/platform/: command_registry.rs  core_services.rs  mod.rs  plugin_manager.rs  service_registry.rs
core/src/plugin_api/: mod.rs  traits.rs
microkernel/: Cargo.toml  README_message_bus.md
microkernel/src/: config.rs  context.rs  event_bus.rs  lib.rs  log.rs  plugin.rs  startup.rs
microkernel/src/application/: entity.rs  mod.rs
microkernel/src/domain/: mod.rs  service.rs
microkernel/src/infrastructure/: config.rs  db.rs  logging.rs
microkernel/src/interface/: cli.rs
microkernel/src/platform/: command_registry.rs  core_services.rs  event_bus.rs  message_bus.rs  microkernel.rs  mod.rs  plugin_manager.rs
microkernel/src/plugin_api/: traits.rs
plugins/backend/: Cargo.toml
plugins/backend/migrations/: 001_create_user_providers.sql  002_create_users_table.sql  005_create_menu_json_seed.sql  006_seed_initial_chat_history.sql  007_create_auth_tokens.sql  012_add_chat_session_is_closed.sql
plugins/backend/src/: lib.rs  startup.rs  static_embed.rs
plugins/backend/src/application/: mod.rs
plugins/backend/src/infrastructure/: startup.rs
plugins/plugin_autoflow_client/: Cargo.toml  README.md
plugins/plugin_autoflow_client/src/: client.rs  lib.rs  plugin.rs  simple_client.rs  simple_plugin.rs
plugins/plugin_autoflow_client/src/application/: mod.rs  service.rs
plugins/plugin_autoflow_client/src/domain/: chat.rs  config.rs  error.rs  messages.rs  mod.rs  session.rs
plugins/plugin_autoflow_client/src/infrastructure/: mod.rs  (+3 more)
plugins/plugin_causality_engine/: Cargo.toml  README_ZH.md
plugins/plugin_causality_engine/src/: engine.rs  lib.rs  plugin.rs
plugins/plugin_ddl_checker/: Cargo.toml  build.rs
plugins/plugin_ddl_checker/go/: libschematracker.go
plugins/plugin_ddl_checker/src/: lib.rs  plugin.rs  types.rs
plugins/plugin_lossy_ddl/: Cargo.toml  build.rs
plugins/plugin_lossy_ddl/go/: go.mod  go.sum  libschematracker.go
plugins/plugin_lossy_ddl/src/: analyzer.rs  error.rs  lib.rs  plugin.rs  types.rs
plugins/plugin_lossy_ddl/tests/: simple_tests.rs
plugins/plugin_multiplexer/: Cargo.toml
plugins/plugin_multiplexer/src/: handler_http.rs  lib.rs  plugin.rs
plugins/plugin_slowlog/: Cargo.toml
plugins/plugin_slowlog/src/: lib.rs  plugin.rs
plugins/plugin_sql_editor/: Cargo.toml
plugins/plugin_sql_editor/src/: lib.rs  plugin.rs
plugins/plugin_tihc_backend/: Cargo.toml
plugins/plugin_tihc_backend/src/: lib.rs  plugin.rs
plugins/plugin_tihc_mcp_server/: Cargo.toml  design.md
plugins/plugin_tihc_mcp_server/src/: bus_handler.rs  handler.rs  lib.rs  plugin.rs
tihc-serverless/: .env.example  .gitignore  Cargo.toml  README.md  findings.md  progress.md  task_plan.md  vercel.json
tihc-serverless/api/: stream_chat.rs
(+642 files in other folders)
