[package]
name = "tihc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[workspace]
members = [
"microkernel"
]

[workspace.dependencies]
serde = { version = "1" }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["aric"]