[package]
name = "tihc"
version = "0.1.0"
edition = "2024"

[dependencies]
microkernel = {path = "./microkernel"}
backend = { path = "./plugins/backend" }

clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
inventory = {workspace = true}


[workspace]
members = [
"microkernel",
"plugins/backend",
"plugins/ddl_checker"]

[workspace.dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "signal"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
toml = "0.9"
axum = "0.8"
tracing-subscriber = { version = "0.3" }
tracing = "0.1"
tracing-appender = "0.2"
dashmap = "6.1.0"
tower = "0.5.2"
inventory = { version = "0.3" }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["aric"]
