[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
microkernel = { path = "../microkernel" }
plugin_slowlog = { path = "../plugins/plugin_slowlog" }
plugin_lossy_ddl = { path = "../plugins/plugin_lossy_ddl", features = ["tidb-engine"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde_json = "1.0.141"
tower-http = { version = "0.6.6" , features = ["cors", "trace"] }
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
chrono = "*"
once_cell = "1.21.3"
tokio-stream = "0.1.17"
rust-embed = { version = "8.7", features = ["axum"] }
mime_guess = "2.0"

[dev-dependencies]
axum-test = "16"
