[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
microkernel = { path = "../microkernel" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
hyper = "1.0"
hyper-util = "0.1.16"
http-body-util = "0.1"
serde_json = "1.0.141"
tower = "0.5"
tower-http = { version = "0.6.6" , features = ["cors", "trace"] }
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
chrono = "*"
once_cell = "1.21.3"
tokio-stream = "0.1.17"
rust-embed = { version = "8.7", features = ["axum"] }
mime_guess = "2.0"
rmcp = { version = "0.6", features = [
    "server",
    "transport-streamable-http-server",
    "schemars"
] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
serde-aux = "4.7.0"
schemars = "1.0.4"

[dev-dependencies]
tracing-subscriber = "0.3"

