[package]
name = "tihc"
version = "1.3.1"
edition = "2021"

[dependencies]
axum = "0.8"
tracing = "0.1.41"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
microkernel = { path = "../microkernel" }
anyhow = "1"
serde_json = "1.0.142"
plugin_lossy_ddl = { path = "../plugins/plugin_lossy_ddl" }
plugin_tihc_backend = { path = "../plugins/plugin_tihc_backend" }
base64ct = "=1.8"