[package]
name = "tihc"
version = "1.3.1"
edition = "2021"

[[bin]]
name = "tihc"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tracing = "0.1.41"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
microkernel = { path = "../microkernel" }
anyhow = "1"
serde_json = "1.0.142"
backend = { path = "../backend" }
base64ct = "=1.8"
plugin_lossy_ddl = { path = "../plugins/plugin_lossy_ddl" }
plugin_causality_engine = { path = "../plugins/plugin_causality_engine" }