[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-log = "0.2.0"
anyhow = "1.0.98"
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1", features = ["sync"] }
