[package]
name = "microkernel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1", features = ["rt", "macros","sync"] }
async-trait = "0.1.88"
dashmap = "6"
clap = "4.5.47"
once_cell = "1.21.3"
