[package]
name = "microkernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
tracing-appender = { workspace = true }
inventory = {workspace = true}
tower = { workspace = true }
once_cell = { workspace = true }