[package]
name = "microkernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
inventory = {workspace = true}
once_cell = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }