[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0"
utils = { path = '../utils' }
anyhow = "1.0"
collect = { path = '../collect' }
tools = { path = '../tools' }
async-trait = "0.1"
futures-util = "0.3"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"