[package]
name = "collect"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
utils = { path = '../utils' }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.4.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }