[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10.3"
sqlparser = { version = "0.54.0", features = ["visitor"] }
sha2 = "0.10.6"
tracing-subscriber = "0.3"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # 添加这行
threadpool = "1.8"

[dev-dependencies]
sqlparser = "0.54.0"

