[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
tools = { path = "../tools" }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.2"