[package]
name = "plugin_autoflow_client"
version = "0.1.0"
edition = "2024"

[dependencies]
# 微内核
microkernel = { path = "../../microkernel" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate"] }
reqwest-eventsource = "0.6"

# 序列化 (启用 derive 功能)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "2"
anyhow = "1.0"

# 工具
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
futures = "0.3"
tokio-stream = "0.1"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.10.1"
async-trait = "0.1"
inventory = {workspace = true}
axum = { workspace = true }

[dev-dependencies]
toml = "0.9"
