[package]
name = "plugin_causality_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
ctor = "0.5"
deep_causality = "0.11"
polars = { version = "0.51", features = ["lazy"] }
microkernel = { path = "../../microkernel" }
plugin_observability = { path = "../plugin_observability" }
serde_with = "3.15.0"

[dev-dependencies]
tracing-subscriber = "0.3"
