[package]
name = "plugin_ddl_checker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["tidb-engine"]
tidb-engine = []

[dependencies]
serde = { workspace = true}
serde_json = { workspace = true}
thiserror = { workspace = true}
anyhow = { workspace = true}
async-trait = { workspace = true}
tokio = { workspace = true}
tracing = { workspace = true}
sqlparser = "0.58"
libc = "0.2"

# Path dependencies (assuming these exist in the workspace)
microkernel = { path = "../../microkernel" }
regex = "1.11.1"

axum = { workspace = true }

inventory = { workspace = true }