[package]
name = "plugin_lossy_ddl"
version = "0.1.0"
edition = "2021"
description = "Simple DDL analysis for detecting lossy operations"

[features]
default = []
tidb-engine = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# Path dependencies (assuming these exist in the workspace)
microkernel = { path = "../../microkernel" }
