[package]
name = "plugin_multiplexer"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
microkernel = { path = "../../microkernel" }
plugin_tihc_backend = { path = "../plugin_tihc_backend" }
axum = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }