[package]
name = "plugin_slowlog"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3"
core = { path = "../../core" }
async-trait = "0.1"
