[package]
name = "plugin_sql_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
common = { path = "../../common" }
core = { path = "../../core" }
serde_json = "1.0.141"
anyhow = "1.0.98"
chrono = "0.4.41"
tracing = { version = "0.1.41", features = ["log"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite"] }
tokio = { version = "1", features = ["full"] }
