[package]
name = "plugin_sql_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
common = { path = "../../common" }
microkernel = { path = "../../microkernel" }
serde_json = "1.0.141"
anyhow = "1.0.98"
chrono = "0.4.41"
tracing = { version = "0.1.41", features = ["log"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
thiserror = { version = "2.0.12", features = ["std"] }
