[package]
name = "plugin_tihc_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
mime_guess = "2.0"
microkernel = { path = "../../microkernel" }
tracing = "0.1.41"
axum = "0.8"
async-trait = "0.1"
serde_json = "1.0"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
plugin_lossy_ddl = { path = "../plugin_lossy_ddl" }
tokio = { version = "1", features = ["full"] }
rust-embed = { version = "8.7", features = ["axum"] }
common = { path = "../../common" }
futures = "0.3"
tokio-stream = "0.1"
once_cell = "1.19"