[package]
name = "plugin_tihc_mcp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
microkernel = { path = "../../microkernel" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "0.6", features = [
    "server",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }
serde_json = "1"
anyhow = "1"
hyper-util = "0.1.16"
hyper = "1.7.0"
ctor = "0.2.0"
async-trait = "0.1"
tokio-util = "0.7.16"
